Source/WebKit2/UIProcess/WebPageContextMenuClient.h
@@ -27,6 +27,7 @@
 #define WebPageContextMenuClient_h
 
 #include "APIClient.h"
+#include "WebHitTestResult.h"
 #include "WKPage.h"
 #include <wtf/Vector.h>
 
@@ -38,7 +39,7 @@ class WebPageProxy;
 
 class WebPageContextMenuClient : public APIClient<WKPageContextMenuClient, kWKPageContextMenuClientCurrentVersion> {
 public:
-    bool getContextMenuFromProposedMenu(WebPageProxy*, const Vector<WebContextMenuItemData>& proposedMenu, Vector<WebContextMenuItemData>& customMenu, APIObject* userData);
+    bool getContextMenuFromProposedMenu(WebPageProxy*, const Vector<WebContextMenuItemData>& proposedMenu, Vector<WebContextMenuItemData>& customMenu, const WebHitTestResult::Data&, APIObject* userData);
     void customContextMenuItemSelected(WebPageProxy*, const WebContextMenuItemData&);
     void contextMenuDismissed(WebPageProxy*);
 };
