Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp
@@ -491,15 +491,8 @@ void WebChromeClient::mouseDidMoveOverElement(const HitTestResult& hitTestResult
     // Notify the bundle client.
     m_page->injectedBundleUIClient().mouseDidMoveOverElement(m_page, hitTestResult, static_cast<WebEvent::Modifiers>(modifierFlags), userData);
 
-    WebHitTestResult::Data webHitTestResultData;
-    webHitTestResultData.absoluteImageURL = hitTestResult.absoluteImageURL().string();
-    webHitTestResultData.absolutePDFURL = hitTestResult.absolutePDFURL().string();
-    webHitTestResultData.absoluteLinkURL = hitTestResult.absoluteLinkURL().string();
-    webHitTestResultData.absoluteMediaURL = hitTestResult.absoluteMediaURL().string();
-    webHitTestResultData.linkLabel = hitTestResult.textContent();
-    webHitTestResultData.linkTitle = hitTestResult.titleDisplayString();
-
     // Notify the UIProcess.
+    WebHitTestResult::Data webHitTestResultData(hitTestResult);
     m_page->send(Messages::WebPageProxy::MouseDidMoveOverElement(webHitTestResultData, modifierFlags, InjectedBundleUserMessageEncoder(userData.get())));
 }
 
